# projects-manager

./: .gitmodules  Procfile  README.md  compose.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.envs/dev/: app.env  db.env
.envs/test/: db.env
backend/docker/: Dockerfile
backend/docker/database/: Dockerfile
backend/docker/python/: Dockerfile
backend/src/: __init__.py  main.py
backend/src/business/models/: DTOComment.py  DTOProject.py  DTOUser.py
backend/src/business/services/: comments_service.py  projects_service.py  users_service.py
backend/src/controllers/exceptions/: exceptions_view.py
backend/src/controllers/rest/: comment_controller.py  project_controller.py  user_controller.py
backend/src/controllers/securite/: login.py  option_tween_factory.py
backend/src/infrastructure/configuration/: application_configuration.py  database_configuration.py  routing_configuration.py
backend/src/infrastructure/securite/: security.py
backend/src/utils/: mappers.py
backend/test/unit/: test_controllers.py  test_services.py
frontend/: Dockerfile.fronend  Dockerfile.frontend  package-lock.json  package.json  webpack-config.js
frontend/public/: index.html  styles.css
frontend/src/: App.tsx  AppRouter.tsx  index.tsx
frontend/src/components/: CommentCreateScreen.tsx  DeleteProjectScreen.tsx  LoginScreen.tsx  ProjectCreateEditScreen.tsx  ProjectCreateScreen.tsx  ProjectDetilsScreen.tsx  ProjectScreen.tsx  UserConfirmEdit.tsx  UserEditForm.tsx  UserEditScreen.tsx  UserProjectsScreen.tsx
(+29 files in other folders)
